# senna-1.1.2-fast

./: .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  senna-cfg.in  senna.h  senna.h.orig  senna.spec.in
bindings/mysql/: mysql-4.0.27.senna.2ind.diff  mysql-4.0.27.senna.2ind.skipmode.diff  mysql-4.0.27.senna.diff  mysql-5.1.15-beta.senna.2ind.diff  mysql-5.1.15-beta.senna.diff
bindings/mysql/myisenna/: Makefile  Makefile.am  Makefile.in  myisenna.cc  myisenna.h  myistest.c
bindings/mysql/udf/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.in  udf_snippet.c
bindings/php/context/: config.m4  config.w32  php_sen_ctx.h  sen_ctx.c  sen_ctx.dsp  sen_ctx.phpclass  test.php
bindings/python/context/: sennactx.c  setup.py
bindings/ruby/: extconf.rb  senna_api.i  senna_api_wrap.c
bindings/ruby/lib/: senna.rb  senna_api_dl.rb
bindings/ruby/test/: all_test.rbx  test_tools.rb
bindings/ruby/test/advanced-api-test/: test_index_advanced.rb  test_query_advanced.rb  test_records_advanced.rb
bindings/ruby/test/basic-api-test/: test_create_index.rb  test_index_update.rb  test_records.rb
bindings/ruby/test/low-level-api-test/: test_sym.rb
bindings/ruby/test/regression-test/fixedbug-r00277/: test_bug_r00277.rb
bindings/ruby/test/regression-test/fixedbug-r00308/: test_bug_r00308.rb
bindings/ruby/test/regression-test/fixedbug-r00343/: test_bug_r00343.rb
bindings/ruby/test/regression-test/fixedbug-r00346/: test_bug_r00346.rb
bindings/ruby/test/regression-test/fixedbug-r00639/: test_bug_r00639.rb
bindings/ruby/test/regression-test/fixedbug-r00643/: test_bug_r00643.rb
bindings/ruby/test/regression-test/fixedbug-r00644/: test_bug_r00644.rb
bindings/ruby/test/utility-api-test/: test_snip_utility.rb
doc/: API.EN  API.JA  CHECKINSTALL.JA  FUTUREWORKS.EN  FUTUREWORKS.JA  INSTALL.JA  KNOWNPROBLEMS.EN  KNOWNPROBLEMS.JA  MYSQLBINDING.EN  MYSQLBINDING.JA  QUERY.EN  QUERY.JA  README.EN  README.JA
lib/: Makefile.am  Makefile.in  cache.c  cache.h  com.c  com.h  ctx.c  ctx.h  index.c  inv.c  inv.h  inv08.c  io.c  io.h  lex.c  lex.h  nfkc.c  ql.c  ql.h  query.c  scm.c  senna_in.h  set.c  set.h  snip.c  snip.h  store.c  store.h  str.c  str.c.orig  str.c.rej  str.h  sym.c  sym.h  sym08.c
src/: Makefile.am  Makefile.in  senna.c  sennachk.c
test/: Makefile.am  Makefile.in  hatenapo.c
util/unicode/: README  icudump.c  nfkc.rb
vcc/: config.h.in  libsenna.c  libsenna.def  libsenna.vc8.0.vcproj  senna.vcproj  sennachk.vcproj
vcc/bindings/ruby/: extconf.rb
